# graphometrica_rosatom_2021_python

./: .gitignore  Dockerfile  Makefile  README.md  README.pd  jmsTest.py  main.py  pyproject.toml  solve2problem.py  solve5tsp.py
data/: input_example.json  paths.csv  problem2_graph.csv  ser_graph_example.json
data/results/: Q.npy  QUBO.csv  adj.npy  answer.csv  initial_adj.csv
solution/converters/: __init__.py  lp2qubo.py  tsp2qubo.py
solution/energy_utils/: __init__.py  energy2time.py
solution/graph_utils/: __init__.py  csv2graph.py  plot_graph.py
solution/service/: app.py
solution/service/effective_converters/: eff_tsp2qubo.py
solution/service/listeners/: TSPListener.py  __init__.py
solution/service/serialization/: __init__.py  as_graph.py  models.py
solution/service/solver/: as_graph.py  eff_tsp2qubo.py  solve.py
test/: tets_solve.py
